--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             padding: 20px;
         }
         h1 {
-            color: #1a73e8;
+            color: #df3915;
             margin-bottom: 10px;
         }
         p {
@@ -30,7 +30,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to dploy.tech</h1>
+        <h1>Bienvenido a dploy.tech</h1>
         <p>This is a test page for the CloudFront distribution.</p>
         <p>Current time: <span id="time"></span></p>
     </div>
