--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>dploy.tech</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Verdana, sans-serif;
             margin: 0;
             padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background-color: #f0f2f5;
+            background-color: #000000;
         }
         .container {
             text-align: center;
@@ -31,7 +31,7 @@
 <body>
     <div class="container">
         <h1>Bienvenido a dploy.tech</h1>
-        <p>This is a test page for the CloudFront distribution.</p>
+        <p>Pagina en construcción.</p>
         <p>Current time: <span id="time"></span></p>
     </div>
     <script>
