--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container">
         <h1>Bienvenido a dploy.tech</h1>
         <p>Pagina en construcción.</p>
-        <p>Current time: <span id="time"></span></p>
+        <p>Hora actual: <span id="time"></span></p>
     </div>
     <script>
         function updateTime() {
